# civitai-downloader-cli

./: .gitignore  BASE_MODEL_FILTERING.md  BATCH_DOWNLOAD.md  CLAUDE.md  README.md  api_key.md.example  batch_download.py  default_output_dir.txt.example  model_filter_illustrious_only.txt  model_filter_sdxl_only.txt  model_filter_white_list.txt  models.txt  pyproject.toml  retry_failed_downloads.py  test_actual_download.py  test_download.py  test_user_images.py  test_user_images_100.py  user.txt
.claude/: settings.local.json
civitai_dl/: __init__.py  __main__.py  cli.py  config.py
civitai_dl/adapters/: __init__.py  api_client.py  downloader.py
civitai_dl/core/: __init__.py  adaptive_concurrency.py  fallback_manager.py  intelligent_retry.py  model_parallelism_manager.py  safety_monitor.py
civitai_dl/monitoring/: __init__.py  health_monitor.py  metrics_collector.py  performance_monitor.py
civitai_dl/services/: download_service.py  metadata_generator.py  parallel_download_service.py  path_manager.py
civitai_dl/utils/: __init__.py  fs.py
docs/: Civitai-Downloader-CLI-Spec.md  Development-Plan.md  Git-Branch-Strategy.md  Performance-Optimization-Plan.md  Stability-First-Development.md
docs/civitai-official/: AIR-‐-Uniform-Resource-Names-for-AI.md  Civitai-Link-Integration.md  How-to-use-models.md  Image-Reproduction.md  Model-Safety-Checks.md  README.md  REST-API-Reference.md
docs/必要物のサンプル/: description.md  (+1 more)
scripts/: final_validation_test.py  minimal_phase2_test.py  parallel_models_test.py  performance_benchmark.py  quick_test_phase2.py  simple_parallel_test.py  test_phase2_performance.py
tests/: test_api_client.py  test_path_manager.py
(+2 files in other folders)
